2011-07-29 Dario Rodriguez <dario.rodriguez@artica.es>

	* bin/PandoraAgent.exe: Compiled new exe with a bug fixed.
	* pandora_windows_service.cc: Fixed a bug related to proxy mode.

2011-07-28 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* pandora_windows_service.h, pandora_windows_service.cc: Added proxy
	mode feature.
	* bin/PandoraAgent.exe: Created new compiled version with proxy mode 
	feature.
	* bin/pandora_agent.conf: Added new parameters to configure proxy mode.

2011-07-28  Sancho Lerena <slerena@artica.es>

	* bin/util/tentacle_server.exe: Tentacle server executable to use it
	in the drone/proxy mode.

2011-07-14  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.h,
	  modules/pandora_module_factory.cc,
	  modules/pandora_module.cc: Set additional module configuration
	  parameters from the XML.

2011-05-06  Vanessa Gil <vanessa.gil@artica.es>

	* win32/pandora.cc: Fixed: Windows agent log and system time are unsynchronized.

2011-03-08  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_regexp.cc: Added support for extended regular
	  expressions.

2010-12-10  Ramon Novoa  <rnovoa@artica.es>

	* bin/util/pandora_update.exe: Updated. Some paths may have been wrong.

2010-12-01  Ramon Novoa  <rnovoa@artica.es>

	* bin/util/pandora_update.exe: Fixed md5 calculation.

2010-12-01  Ramon Novoa  <rnovoa@artica.es>

	* bin/PandoraAgent.exe: Updated ro r3644.

	* installer/pandora.mpi, pandora.cc: Updated version strings.

2010-11-29  Ramon Novoa  <rnovoa@artica.es>

	* bin/util/pandora_update.exe: Give the agent service some time to stop.

2010-11-18  Ramon Novoa  <rnovoa@artica.es>

	* bin/PandoraAgent.exe: Updated to r3583.

2010-11-17  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Fixed a typo in copyScpDataFile that made
	  it always return PANDORA_EXCEPTION.

2010-11-15  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc,
	  modules/pandora_module_logevent.h: Search for event log descriptions