@@ -1,3 +1,11 @@
+2011-08-19  Ramon Novoa  <rnovoa@artica.es>
+
+	* modules/pandora_module_plugin.cc: Set a virtually infinite timeout
+	  for plugins.
+
+	* pandora_windows_service.cc: The Pandora_Windows_Service destructor
+	  could try to dereference a NULL pointer. Fixed.
+
 2011-07-29 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* bin/PandoraAgent.exe: Compiled new exe with a bug fixed.
